Linux build fixes
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@86 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ endif()
 include_directories(${SDL_INCLUDE_DIR})
 include_directories(externals/rapidxml-1.13)
 include_directories(${OPENGL_INCLUDE_DIR})
+include_directories(externals/glm-0.9.3.1)
     
 # internal includes
 include_directories(src/common/src)
