gekko-qt: Fix Windows build.
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@92 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/gekko_qt/gekko_qt.vcxproj
+++ b/src/gekko_qt/gekko_qt.vcxproj
@@ -89,6 +89,7 @@
     </UIC>
     <MOC>
       <QtKeywords>false</QtKeywords>
+      <QtCommandLine>/I"$(SolutionDir)\src\common\src" /I"$(SolutionDir)\src\core\src" /I"$(SolutionDir)\externals\glew-1.6.0\include" /I"$(SolutionDir)\externals\sdl-1.2.15\include" /I"$(SolutionDir)\externals\qhexedit"</QtCommandLine>
     </MOC>
   </ItemDefinitionGroup>
   <ItemGroup>
