Re-enable fastcall on Windows for all projects but pcafe and gekko-qt.
In the long run we should probably properly declare functions which need to be fastcall as such instead of forcing all functions in a project to be fastcall (esp. since linking against wrongly declared functions causes issues for projects that don't use fastcall for everything).


git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@93 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -269,6 +269,7 @@
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <AdditionalIncludeDirectories>$(SolutionDir)\externals\sdl-1.2.15\include;$(SolutionDir)\externals\rapidxml-1.13</AdditionalIncludeDirectories>
+      <CallingConvention>FastCall</CallingConvention>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
