linux build fixes.
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@102 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/gekko_qt/CMakeLists.txt
+++ b/src/gekko_qt/CMakeLists.txt
@@ -15,6 +15,7 @@ qt4_wrap_ui(UI_HDRS
                     src/main.ui)
 
 qt4_wrap_cpp(MOC_SRCS
+                        src/bootmanager.hxx
                         src/callstack.hxx
                         src/disasm.hxx
                         src/gekko_regs.hxx
