Adding basic joypad support, works with buttons and axes only, hats will be added later.
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@104 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/input_common/CMakeLists.txt
+++ b/src/input_common/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(SRCS	src/input_common.cpp
-			src/sdl_keys/sdl_keys.cpp)
+			src/sdl_keys/sdl_keys.cpp
+			src/sdl_joypads/sdl_joypads.cpp)
 
 add_library(input_common STATIC ${SRCS})
