Whoops, reverting video_core CMakesList, fixing xml config files
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@105 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/video_core/CMakeLists.txt
+++ b/src/video_core/CMakeLists.txt
@@ -1,10 +1,10 @@
-set(SRCS	src/bp_mem.cpp
-			src/cp_mem.cpp
-			src/fifo.cpp
-			src/renderer_base.cpp
-			src/vertex_loader.cpp
-			src/video_core.cpp
-			src/xf_mem.cpp
-			src/renderer_gl3/renderer_gl3.cpp)
+set(SRCS
+            src/bp_mem.cpp
+            src/cp_mem.cpp
+            src/fifo.cpp
+            src/renderer_base.cpp
+            src/vertex_loader.cpp
+            src/video_core.cpp
+            src/renderer_gl3/renderer_gl3.cpp)
 
 add_library(video_core STATIC ${SRCS})
