Added shonumi's sdl_joypads to VCproject
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@114 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/input_common/input_common.vcxproj
+++ b/src/input_common/input_common.vcxproj
@@ -333,10 +333,12 @@
   <ItemGroup>
     <ClInclude Include="src\gc_controller.h" />
     <ClInclude Include="src\input_common.h" />
+    <ClInclude Include="src\sdl_joypads\sdl_joypads.h" />
     <ClInclude Include="src\sdl_keys\sdl_keys.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\input_common.cpp" />
+    <ClCompile Include="src\sdl_joypads\sdl_joypads.cpp" />
     <ClCompile Include="src\sdl_keys\sdl_keys.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
