--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,9 @@ endif()
 option(DISABLE_QT4 "Disable Qt4 GUI" OFF)
 if(NOT DISABLE_QT4)
     include(FindQt4)
-    find_package(Qt4 COMPONENTS QtCore QtGui)
+    find_package(Qt4 COMPONENTS QtCore QtGui QtOpenGL)
 
-    if(QT4_FOUND AND QT_QTCORE_FOUND AND QT_QTGUI_FOUND)
+    if(QT4_FOUND AND QT_QTCORE_FOUND AND QT_QTGUI_FOUND AND QT_QTOPENGL_FOUND)
         include(${QT_USE_FILE})
         include_directories(${QT_INCLUDES})
         include_directories(externals/qhexedit)
@@ -46,7 +46,7 @@ include_directories(src/input_common/src)
 include_directories(src/win32/src)
 
 # process subdirectories
-if(QT4_FOUND AND QT_QTCORE_FOUND AND QT_QTGUI_FOUND AND NOT DISABLE_QT4)
+if(QT4_FOUND AND QT_QTCORE_FOUND AND QT_QTGUI_FOUND AND QT_QTOPENGL_FOUND AND NOT DISABLE_QT4)
     add_subdirectory(externals/qhexedit)
 endif()
 add_subdirectory(src)
